--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -3,9 +3,7 @@ import { config } from "../../mauiday.config.mjs";
 ---
 
 <header class="bg-transparent absolute top-0 left-0 w-full z-10 font-header">
-  <div
-    class="container max-w-5xl mx-auto px-4 flex items-center justify-between py-4"
-  >
+  <div class="container max-w-5xl mx-auto px-4 flex items-center justify-between py-4">
     <!-- Logo -->
     <div class="flex items-center space-x-2 h-12">
       <a href="/" class="cursor-pointer">
