--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,10 +1,9 @@
 ---
-
 ---
 
 <section
   class="relative bg-cover bg-center"
-  style="background-image: url('images/banner.jpg');"
+  style={`background-image: url('${import.meta.env.BASE_URL}/images/banner.jpg');`}
 >
   <div class="container max-w-4xl mx-auto px-8 py-48 flex flex-col h-full">
     <p class="text-brand-extra font-bold mb-4 text-xl font-header uppercase">
