--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,14 @@ import About from '../components/about.astro';
 import Location from '../components/location.astro';
 import Sponsors from '../components/sponsors.astro';
 import Speakers from '../components/speakers.astro';
+import Schedule from '../components/schedule.astro';
 ---
 
 <Layout>
 	<Hero />
 	<About />
 	<Speakers />
+	<Schedule />
 	<Location />
 	<Sponsors />
 </Layout>
