--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,7 @@ const {
   pageDescription = siteMeta.description,
   pageUrl = siteMeta.url,
   pageImage = siteMeta.image,
+  isStaticHeader,
 } = Astro.props;
 ---
 
@@ -36,7 +37,7 @@ const {
     />
   </head>
   <body>
-    <Navigation />
+    <Navigation {isStaticHeader} />
     <slot />
     <Footer />
     <button
