--- a/src/pages/code-of-conduct.astro
+++ b/src/pages/code-of-conduct.astro
@@ -1,7 +1,186 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout>
-    
+<Layout isStaticHeader={true}>
+  <section class="bg-white text-gray-600 text-md py-16">
+    <div class="container max-w-4xl mx-auto px-4">
+      <!-- Section Header -->
+      <div class="mb-12">
+        <h1 class="text-4xl mb-8 text-brand-dark font-bold">
+          .NET MAUI Day Code of Conduct
+        </h1>
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">Our pledge</h2>
+        <p class="mt-4">
+          We as members, contributors, and leaders pledge to make participation
+          in our community a harassment-free experience for everyone, regardless
+          of age, body size, visible or invisible disability, ethnicity, sex
+          characteristics, gender identity and expression, level of experience,
+          education, socio-economic status, nationality, personal appearance,
+          race, religion, or sexual identity and orientation.
+        </p>
+        <p class="mt-4">
+          We pledge to act and interact in ways that contribute to an open,
+          welcoming, diverse, inclusive, and healthy community.
+        </p>
+
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">
+          Report contact details
+        </h2>
+        <p class="mt-4">Please see the details under “Enforcement” below.</p>
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">
+          Our standards
+        </h2>
+        <p class="mt-4">
+          Examples of behavior that contributes to a positive environment for
+          our community include:
+        </p>
+        <ul class="list-disc my-8 space-y-2 pl-8">
+          <li class="leading-6">
+            Demonstrating empathy and kindness toward other people
+          </li>
+          <li class="leading-6">
+            Being respectful of differing opinions, viewpoints, and experiences
+          </li>
+          <li class="leading-6">
+            Giving and gracefully accepting constructive feedback
+          </li>
+          <li class="leading-6">
+            Accepting responsibility and apologizing to those affected by our
+            mistakes, and learning from the experience
+          </li>
+          <li class="leading-6">
+            Focusing on what is best not just for us as individuals, but for the
+            overall community
+          </li>
+        </ul>
+        <p>Examples of unacceptable behavior include:</p>
+        <ul class="list-disc my-8 space-y-2 pl-8">
+          <li class="leading-6">
+            The use of sexualized language or imagery, and sexual attention or
+            advances of any kind
+          </li>
+          <li class="leading-6">
+            Trolling, insulting or derogatory comments, and personal or
+            political attacks
+          </li>
+          <li class="leading-6">Public or private harassment</li>
+          <li class="leading-6">
+            Publishing others’ private information, such as a physical or email
+            address, without their explicit permission
+          </li>
+          <li class="leading-6">
+            Other conduct which could reasonably be considered inappropriate in
+            a professional setting
+          </li>
+        </ul>
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">
+          Enforcement Responsibilities
+        </h2>
+        <p class="mt-4">
+          Community leaders are responsible for clarifying and enforcing our
+          standards of acceptable behavior and will take appropriate and fair
+          corrective action in response to any behavior that they deem
+          inappropriate, threatening, offensive, or harmful.
+        </p>
+        <p class="mt-4">
+          Community leaders have the right and responsibility to remove, edit,
+          or reject comments, commits, code, wiki edits, issues, and other
+          contributions that are not aligned to this Code of Conduct, and will
+          communicate reasons for moderation decisions when appropriate.
+        </p>
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">Scope</h2>
+        <p class="mt-4">
+          This Code of Conduct applies within all community spaces, and also
+          applies when an individual is officially representing the community in
+          public spaces. Examples of representing our community include using an
+          official email address, posting via an official social media account,
+          or acting as an appointed representative at an online or offline
+          event.
+        </p>
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">
+          Enforcement
+        </h2>
+
+        <p class="mt-4">
+          Instances of abusive, harassing, or otherwise unacceptable behavior
+          may be reported to the community leaders responsible for enforcement
+          at
+          <a
+            class="text-brand-extra hover:underline"
+            href="mailto:gerald@verslu.is">Gerald Versluis</a
+          > (one of the organizers).
+        </p>
+        <p class="mt-4">
+          If, for whatever reason, you prefer another contact, feel free to
+          contact
+          <a
+            class="text-brand-extra hover:underline"
+            href="mailto:Anjuli.Jhakry@hotmail.com">Anjuli Jhakry</a
+          > (not part of the organization crew) and she will make sure to follow
+          up with the people in question.
+        </p>
+        <p class="mt-4">
+          All complaints will be reviewed and investigated promptly and fairly.
+        </p>
+        <p class="mt-4">
+          All community leaders are obligated to respect the privacy and
+          security of the reporter of any incident.
+        </p>
+
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">
+          Enforcement Guidelines
+        </h2>
+        <h3 class="text-xl text-brand-dark mt-8 mb-4 font-bold">1. Correction</h3>
+        <p class="mt-4"><b>Community Impact:</b> Use of inappropriate language or other behavior deemed unprofessional or unwelcome in the community.</p>
+        <p class="mt-4"><b>Consequence:</b> A private, written warning from community leaders, providing clarity around the nature of the violation and an explanation of why the behavior was inappropriate. A public apology may be requested.</p>
+        <h3 class="text-xl text-brand-dark mt-8 mb-4 font-bold">2. Warning</h3>
+        <p class="mt-4"><b>Community Impact:</b> A violation through a single incident or series of actions.</p>
+        <p class="mt-4"><b>Consequence:</b> A warning with consequences for continued behavior. No interaction with the people involved, including unsolicited interaction with those enforcing the Code of Conduct, for a specified period of time. This includes avoiding interactions in community spaces as well as external channels like social media. Violating these terms may lead to a temporary or permanent ban.</p>
+        <h3 class="text-xl text-brand-dark mt-8 mb-4 font-bold">3. Temporary Ban</h3>
+        <p class="mt-4"><b>Community Impact:</b> A serious violation of community standards, including sustained inappropriate behavior.       </p>
+        <p class="mt-4"><b>Consequence:</b> A temporary ban from any sort of interaction or public communication with the community for a specified period of time. No public or private interaction with the people involved, including unsolicited interaction with those enforcing the Code of Conduct, is allowed during this period. Violating these terms may lead to a permanent ban.</p>
+        <h3 class="text-xl text-brand-dark mt-8 mb-4 font-bold">4. Permanent Ban</h3>
+        <p class="mt-4"><b>Community Impact:</b> Demonstrating a pattern of violation of community standards, including sustained inappropriate behavior, harassment of an individual, or aggression toward or disparagement of classes of individuals.</p>
+        <p class="mt-4"><b>Consequence:</b> A permanent ban from any sort of public interaction within the community.</p>
+
+        <h2 class="text-2xl mt-8 mb-4 text-brand-dark font-bold">Attribution</h2>
+        <p class="mt-4">
+          This Code of Conduct is adapted from the <a
+            href="https://www.contributor-covenant.org"
+            target="_blank" class="text-brand-extra hover:underline"
+            rel="noreferrer">Contributor Covenant</a
+          >, version 2.0, available at
+          <a
+            href="https://www.contributor-covenant.org/version/2/0/code_of_conduct.html"
+            target="_blank" class="text-brand-extra hover:underline"
+            rel="noreferrer"
+            >https://www.contributor-covenant.org/version/2/0/code_of_conduct.html</a
+          >.
+        </p>
+        <p class="mt-4">
+          Community Impact Guidelines were inspired by
+          <a
+            href="https://github.com/mozilla/diversity"
+            target="_blank" class="text-brand-extra hover:underline"
+            rel="noreferrer">Mozilla’s code of conduct enforcement ladder</a
+          >.
+        </p>
+        <p class="mt-4">
+          For answers to common questions about this code of conduct, see the
+          FAQ at
+          <a
+            href="https://www.contributor-covenant.org/faq"
+            target="_blank" class="text-brand-extra hover:underline"
+            rel="noreferrer">https://www.contributor-covenant.org/faq</a
+          >. Translations are available at <a
+            href="https://www.contributor-covenant.org/translations"
+            target="_blank" class="text-brand-extra hover:underline"
+            rel="noreferrer"
+            >https://www.contributor-covenant.org/translations</a
+          >.
+        </p>
+      </div>
+    </div>
+  </section>
 </Layout>
