--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -29,6 +29,7 @@ const { ticketUrl } = config;
     <div class="flex space-x-4">
       <a
         href={`${ticketUrl}`}
+        target="_blank"
         class="bg-brand-extra font-bold text-white px-6 py-3 rounded-full text-md hover:bg-brand-extraDark"
         >Get a Ticket</a
       >
