--- a/src/pages/code-of-conduct.astro
+++ b/src/pages/code-of-conduct.astro
@@ -109,15 +109,15 @@ import Layout from "../layouts/Layout.astro";
           <a
             class="text-brand-extra hover:underline"
             href="mailto:gerald@verslu.is">Gerald Versluis</a
-          > (one of the organizers).
+          > (not part of the London organizers, but involved).
         </p>
         <p class="mt-4">
           If, for whatever reason, you prefer another contact, feel free to
           contact
           <a
             class="text-brand-extra hover:underline"
-            href="mailto:Anjuli.Jhakry@hotmail.com">Anjuli Jhakry</a
-          > (not part of the organization crew) and she will make sure to follow
+            href="mailto:Tony.edwards@gmail.com">Tony Edwards</a
+          > (note: part of the London crew) and he will make sure to follow
           up with the people in question.
         </p>
         <p class="mt-4">
