--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -12,7 +12,7 @@ const { ticketUrl } = config;
 >
   <div class="container max-w-4xl mx-auto px-8 py-48 flex flex-col h-full">
     <p class="text-brand-extra font-bold mb-4 text-xl font-header uppercase">
-      New event coming up in October!
+      Next event: March 14, 2025 in London!
     </p>
     <h1
       class="text-white text-4xl md:text-5xl uppercase font-header font-bold mb-4"
