--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import loadConfig from '../configLoader';
 
 const config = await loadConfig();
 
-const { ticketUrl } = config;
+const { ticketUrl, headline } = config;
 ---
 
 <section
@@ -12,7 +12,7 @@ const { ticketUrl } = config;
 >
   <div class="container max-w-4xl mx-auto px-8 py-48 flex flex-col h-full">
     <p class="text-brand-extra font-bold mb-4 text-xl font-header uppercase">
-      Next event: March 14, 2025 in London!
+      {headline}
     </p>
     <h1
       class="text-white text-4xl md:text-5xl uppercase font-header font-bold mb-4"
