--- a/src/components/location.astro
+++ b/src/components/location.astro
@@ -3,7 +3,7 @@ import loadConfig from '../configLoader';
 
 const config = await loadConfig();
 
-const { location, locationNote, locationAddress } = config;
+const { location, locationNote, locationAddress, mapsEmbedUrl } = config;
 ---
 
 <section id="location" class="bg-brand-light py-16 pb-0 px-0">
@@ -29,7 +29,7 @@ const { location, locationNote, locationAddress } = config;
   </div>
   <div class="mx-auto p-0 m-0">
     <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.709543368347!2d6.963219500000001!3d50.9290898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf25b4bb4cf92b%3A0x80c4f5fba887b23b!2sMicrosoft%20Germany%20GmbH!5e0!3m2!1sen!2snl!4v1704618839331!5m2!1sen!2snl"
+      src={mapsEmbedUrl}
       width="100%"
       height="450"
       class="bg-brand-light"
