Text added to replace dumdum text

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -23,12 +23,7 @@
         The Only Conference Dedicated to .NET MAUI
       </h2>
       <p class="text-gray-700 text-md text-base mb-8">
-        This is some jibberish that Gerald loves to write. No really, he does.
-        He did it for the UK guys too. There really is no telling how many
-        paragraphs he can fill here, but if he can fill just the one that would
-        already be great. As you might be able to tell I’m waffling a great deal
-        to fill this paragraph myself, but we do need to make sure that it is
-        replaced at some point. Really.
+        .NET MAUI Day is a vibrant, one-day event dedicated to exploring the power of .NET Multi-platform App UI (.NET MAUI). Join us as we dive into the latest tools, techniques, and trends for building native, cross-platform applications with .NET. Whether you're a seasoned developer or just starting your journey, MauiDay offers inspiring talks, expert-led sessions, and networking opportunities to help you level up your skills and connect with the community.
       </p>
       <a
         href="/code-of-conduct"
