--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -21,8 +21,7 @@ const { ticketUrl, headline } = config;
     </h1>
     <p class="text-white text-lg mt-6 mb-12">
       .NET MAUI day is a one-day, free, event filled with sessions that have to
-      do with cross-platform development based on .NET MAUI (Multi-platform App
-      UI). Speakers from all around the world will be there to present about the
+      do with cross-platform development using, you guessed it, .NET MAUI. Speakers from all around the world will be there to present about the
       latest and greatest in the .NET MAUI ecosystem, as well as being in the
       “hallway track” so you can talk to them, discuss and ask questions.
     </p>
