gone with subdomain

--- a/src/components/metahead.astro
+++ b/src/components/metahead.astro
@@ -23,7 +23,7 @@ const {
   <meta property="og:title" content={pageTitle} />
   <meta property="og:description" content={pageDescription} />
   <meta property="og:url" content={pageUrl} />
-  <meta property="og:image" content=`${import.meta.env.BASE_URL}/${pageImage}`/>
+  <meta property="og:image" content=`/${pageImage}`/>
   <meta property="og:type" content="website" />
 
   <!-- Twitter Metadata -->
