--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -24,7 +24,7 @@ const sponsors: Sponsor[] = config.sponsors;
             class="flex flex-col items-center p-4 transition-transform opacity-70 transform hover:scale-105 hover:opacity-100"
           >
             <img
-              src={`${import.meta.env.BASE_URL}/images/sponsors/${sponsor.logo}.png`}
+              src={`/images/sponsors/${sponsor.logo}.png`}
               alt={sponsor.name}
               class="w-full object-contain mb-4"
             />
