--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -7,7 +7,7 @@
     <!-- Image Column -->
     <div class="w-full md:w-1/2 mb-8 md:mb-0">
       <img
-        src={`${import.meta.env.BASE_URL}/images/people.png`} 
+        src={`/images/people.png`} 
         alt="Event attendees"
         class="w-full h-auto"
       />
