--- a/src/components/metahead.astro
+++ b/src/components/metahead.astro
@@ -23,11 +23,11 @@ const {
   <meta property="og:title" content={pageTitle} />
   <meta property="og:description" content={pageDescription} />
   <meta property="og:url" content={pageUrl} />
-  <meta property="og:image" content=`${config.SITE_ROOT}/${pageImage}`/>
+  <meta property="og:image" content=`${config.SITE_ROOT}/images/${pageImage}`/>
   <meta property="og:type" content="website" />
 
   <!-- Twitter Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content={pageTitle} />
   <meta name="twitter:description" content={pageDescription} />
-  <meta name="twitter:image" content=`${config.SITE_ROOT}/${pageImage}` />
+  <meta name="twitter:image" content=`${config.SITE_ROOT}/images/${pageImage}` />
