--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -14,7 +14,7 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
     <!-- Logo -->
     <div class="flex items-center space-x-2 h-12">
       <a href={`/`} class="cursor-pointer">
-        <img src={`/images/logo${isStaticHeader ? '' : '-darkmode' }.png`} class="h-[40px] object-contain" alt=".NET MAUI Day" />
+        <img src={`/images/logo${isStaticHeader ? '-darktext' : '-lighttext' }.svg`} class="h-[40px] object-contain" alt=".NET MAUI Day" />
       </a>
     </div>
 
