--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const {
 <html class="scroll-smooth" lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href={`/favicon.png`} />
+    <link rel="icon" href={`/favicon.svg`} type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
     <link
