wip - add call for speakers

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/hero.astro';
 import About from '../components/about.astro';
 import Location from '../components/location.astro';
+import CFS from '../components/cfs.astro';
 import Sponsors from '../components/sponsors.astro';
 import Speakers from '../components/speakers.astro';
 import Schedule from '../components/schedule.astro';
@@ -14,5 +15,6 @@ import Schedule from '../components/schedule.astro';
 	<Speakers />
 	<Schedule />
 	<Location />
+	<CFS />
 	<Sponsors />
 </Layout>
