--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -26,17 +26,13 @@ const { ticketUrl, headline } = config;
       “hallway track” so you can talk to them, discuss and ask questions.
     </p>
     <div class="flex space-x-4">
-      <a
-        href={`${ticketUrl}`}
+      <a href={`${ticketUrl}`}
         target="_blank"
-        class="bg-brand-extra font-bold text-white px-6 py-3 rounded-full text-md hover:bg-brand-extraDark"
-        >Get a Ticket</a
-      >
-      <a
-        href="#speakers"
-        class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark"
-        >View Speakers</a
-      >
+        class="bg-brand-extra font-bold text-white px-6 py-3 rounded-full text-md hover:bg-brand-extraDark">Get a Ticket</a>
+        <a href="#speakers"
+        class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">View Speakers</a>
+        <a href="#call-for-speakers"
+        class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">Submit a Talk</a>
     </div>
   </div>
 </section>
