--- a/src/components/navigation.astro
+++ b/src/components/navigation.astro
@@ -41,6 +41,11 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
         <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
       </p>
       <p class={`group hover:text-${accentColor} relative`}>
+        <a href=`/#call-for-speakers` class="cursor-pointer transition">Call for Speakers</a>
+        <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
+        <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
+      </p>
+      <p class={`group hover:text-${accentColor} relative`}>
         <a href=`/#sponsors` class="cursor-pointer transition">Sponsors</a>
         <span class={`absolute -bottom-1 left-1/2 w-0 transition-all h-0.5 bg-${accentColor} group-hover:w-3/6`}></span>
         <span class={`absolute -bottom-1 right-1/2 w-0 transition-all h-0.5 bg-${accentColor}  group-hover:w-3/6`}></span>
@@ -83,6 +88,7 @@ let accentColor = isStaticHeader ? 'brand-extra' : 'brand-light';
       <a href=`/#speakers` class={`hover:text-${accentColor} cursor-pointer transition`}>Speakers</a>
       <a href=`/#schedule` class={`hover:text-${accentColor} cursor-pointer transition`}>Schedule</a>
       <a href=`/#location` class={`hover:text-${accentColor} cursor-pointer transition`}>Location</a>
+      <a href=`/#call-for-speakers` class={`hover:text-${accentColor} cursor-pointer transition`}>Call for Speakers</a>
       <a href=`/#sponsors` class={`hover:text-${accentColor} cursor-pointer transition`}>Sponsors</a>
       <a href=`/code-of-conduct` class={`hover:text-${accentColor} cursor-pointer transition`}>Code of Conduct</a>
     </nav>
