--- a/src/components/cfs.astro
+++ b/src/components/cfs.astro
@@ -7,9 +7,9 @@
       <p class="text-brand-extra font-bold mb-4 text-xl font-header uppercase">Have you considered speaking?</p>
       <h2 class="text-white text-4xl md:text-4xl uppercase font-header font-bold mb-4">Call for Speakers</h2>
       <p class="text-white text-base text-md mb-12">
-        We're looking for passionate speakers, of all levels of experience to share their knowledge and experience with the .NET MAUI community. If you have a topic you'd like to present, we'd love to hear from you! 
+        We're looking for passionate speakers of all levels of experience to share their knowledge and experience with the .NET MAUI community. If you have a topic you'd like to present, or a story to tell, we'd love to hear from you! 
       </p>
-      <a href="https://sessionize.com/maui-day-london-2025/" target="_blank" class="bg-white text-brand-dark font-bold px-6 py-3 rounded-full text-md hover:bg-brand-light hover:text-white">Submit a Talk</a>
+      <a href="https://sessionize.com/maui-day-london-2025/" target="_blank" class="bg-white text-brand-dark font-bold px-6 py-3 rounded-full text-md hover:bg-brand-light hover:text-brand-dark border border-brand-dark">Submit a Talk</a>
     </div>
   </section>
   
