Make certain sections dependent on config
I've made the speakers/schedule section dependent on a config value per conference. That way the conference can decide when the speakers/schedule section are visible. Given that CFS and the speakers/schedule are fairly mutually exclusive it makes little sense to show them all at once. Also this allows for CFS to move higher up the page for people to notice.

--- a/src/components/cfs.astro
+++ b/src/components/cfs.astro
@@ -12,7 +12,7 @@ const config = await loadConfig();
       <p class="text-white text-base text-md mb-12">
         We're looking for passionate speakers of all levels of experience to share their knowledge and experience with the .NET MAUI community. If you have a topic you'd like to present, or a story to tell, we'd love to hear from you! 
       </p>
-      <a href=`${config.sessionizeCfsUrl}` target="_blank" class="bg-white text-brand-dark font-bold px-6 py-3 rounded-full text-md hover:bg-brand-light hover:text-brand-dark border border-brand-dark">Submit a Talk</a>
+      <a href=`${config.sessionizeCfsUrl}` target="_blank" class="bg-brand-extra font-bold text-white px-6 py-3 rounded-full text-md hover:bg-brand-extraDark">Submit a Talk</a>
     </div>
   </section>
   
