--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import loadConfig from '../configLoader';
 
 const config = await loadConfig();
 
-const { ticketUrl, headline } = config;
+const { ticketUrl, headline, hasAnnouncedSpeakers } = config;
 ---
 
 <section
@@ -29,10 +29,17 @@ const { ticketUrl, headline } = config;
       <a href={`${ticketUrl}`}
         target="_blank"
         class="bg-brand-extra font-bold text-white px-6 py-3 rounded-full text-md hover:bg-brand-extraDark">Get a Ticket</a>
-        <a href="#speakers"
+      
+      {hasAnnouncedSpeakers ? (
+      <>
+      <a href="#speakers"
         class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">View Speakers</a>
-        <a href="#call-for-speakers"
+      </>
+      ) : ( 
+      <>
+      <a href="#call-for-speakers"
         class="border font-bold border-white text-white px-6 py-3 rounded-full text-md hover:bg-white hover:text-brand-dark">Submit a Talk</a>
+        </> )}
     </div>
   </div>
 </section>
